# pixelviz

./: .readthedocs.yaml  README.md  pyproject.toml  requirements-document.txt  requirements.txt
.github/workflows/: python-publish.yml
doc/: gen_api.py
doc/source/: conf.py  index.rst
doc/source/api/: pixviz.main_gui.rst  pixviz.proc.rst  pixviz.roi.rst  pixviz.rst  pixviz.ui_components.rst  pixviz.ui_logging.rst
src/pixviz/: __main__.py  core.py  main.py  main_gui.py  output.py  proc.py  roi.py  todo.md  ui_components.py  ui_logging.py
